# job_scraper

./: .gitignore  README.md  pyproject.toml
backend/apply/: models.py
backend/apply/migrations/: 0001_initial.py
backend/backend/: db.py  settings.py  urls.py
backend/job/: apps.py  forms.py  models.py  signals.py  urls.py  views.py
backend/job/management/commands/: common_words.py  process_jobs.py  restore_jobs.py  scrape_jobs.py
backend/job/migrations/: 0001_initial.py
backend/job/processors/: __init__.py  backup.py  companies.py  info.py  requirements.py  types.py
backend/job/templates/: detail.html  list.html  paginated.html
backend/job/templatetags/: job_tags.py
backend/templates/: base.html
